<resources>
    <string name="app_name">Chamber</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="search_booking_label">Search Booking</string>
    <string name="band_name_label">Band Name</string>
    <string name="select_town_label">Select Town</string>
    <string name="select_studio_label">Select Studio</string>
    <string name="select_date_label">Select Date</string>
    <string name="search_button_label">Search</string>
    <string name="band_name_example">Mocca Band</string>
    <string name="manage_booking_label">Manage Booking</string>
    <string name="booking_label">Booking</string>
    <string name="book_button_label">Book</string>
    <string name="studio_name_label">Studio</string>
    <string name="date_label">Date</string>
    <string name="hour_label">Hour</string>
    <string name="room_label">Room</string>
    <string name="total_payment_label">Total Payment</string>
    <string name="continue_to_payment_button_label">Continue to payment</string>
    <string name="booking_review_label">Booking Review</string>
    <string name="bgHeaderbookingreview">headerBookingReview</string>
    <string name="bank_account_number_label">Bank Account Number</string>
    <string name="payment_label">Payment</string>
    <string name="under_the_name_label">Under The Name</string>
    <string name="keterangan_payment1">harap ditransfer sebelum pukul</string>
    <string name="limit_time_default_value">HH:MM</string>
    <string name="confirm_payment_label">Confirm Payment</string>
    <string name="keterangan_payment2">untuk mengkonfirmasi pembayaran harap menghubungi nomor berikut:</string>
    <string name="booking_history_label">Booking History</string>
    <string name="selected_date">Selected Date</string>
    <string name="select_date_button_label">Select Date</string>
    <string name="no_selection_label">No Selection</string>
    <string name="your_band_name_hint">Your band name</string>
    <string name="content_authority">gomes.com.gomesstudioreservation</string>
    <string name="action_register">Sign Up</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_phone_number">No. Telepon</string>
    <string name="prompt_user_password">Password</string>
    <string name="prompt_confrim_password">Confrim Password</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="action_sign_in_btn">Sign In</string>
    <string name="btn_link_to_login">Already registered! Login Me.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_edit_profile">Profile</string>
    <string name="nav_booking_history">Booking History</string>
    <string name="nav_help">Help</string>
    <string name="nav_about_us">About</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Profile</item>
        <item>Booking History</item>
        <item>About</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_activity_register">Register</string>
    <string name="label_jadwal_studio">Studio :</string>
    <string name="room_jadwal_label">Room :</string>

    <string name="dialog_message">Are you sure that you want to submit your reservation data?</string>
    <string name="dialog_title">Confirmation</string>

    <string name="dialog_select_schedule">Are you sure to submit your selected schedule?</string>
    <string name="dialog_select_schedule_title">Confirmation</string>

    <string name="dialog_cancel_booking_message">Are you sure that you want to cancel your reservation data?</string>
    <string name="dialog_cancel_booking_title">Are you sure?</string>

    <string name="ok">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="nama_room">Ruang</string>

    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="profile_label">Profile</string>
    <string name="current_password_label">current password</string>
    <string name="new_password_label">new password</string>
    <string name="change_password_label">change password</string>
    <string name="save_btn">Save</string>
    <string name="change_password_btn">change password</string>
    <string name="edit_profile_btn">Edit profile</string>
    <string name="edit_btn">edit</string>
    <string name="harga_sewa_idr_label">Harga sewa :</string>
    <string name="confirm_new_password_hint">confirm new password</string>
    <string name="nama_user">Nama user</string>
    <string name="foto_user_description">foto user</string>
    <string name="input_password_to_confirm_hint">Password confirmation</string>
    <string name="cancel_btn_label">cancel</string>
    <string name="bgfortanggalbooking_cd">bgForTanggalBooking</string>
    <string name="booking_date_label">Booking Date</string>
    <string name="booked_status">Booked</string>
    <string name="confirmed_status">confirmed</string>
    <string name="failed_status">failed</string>
    <string name="canceled_status">Canceled</string>
    <string name="kode_booking_label">Kode Booking :</string>
    <string name="edit_reservasi_button_label">Edit Reservasi</string>
    <string name="cancel_reservasi_button_label">Cancel Reservasi</string>
    <string name="headereditreservation">HeaderEditReservation</string>
    <string name="edit_booking_label">Edit Booking</string>
    <string name="simpan_perubahan_button_label">Simpan perubahan</string>
    <string name="tanggal_booking_label">Tanggal Booking</string>
    <string name="jadwal_label">Jadwal</string>
    <string name="waktu_mulai_label">waktu mulai</string>
    <string name="waktu_selesai_label">waktu selesai</string>
    <string name="website_label">www.chamber.id</string>
    <string name="chamber_registration_label">Chamber Registration</string>
    <string name="payment_info">Payment Info</string>
    <string name="jadwal_reservasi_label">Jadwal Reservasi</string>
    <string name="batas_pembayaran_label">Batas Pembayaran</string>
    <string name="waktu_booking_label">Waktu Booking :</string>
    <string name="btn_cancel_booking_label">Cancel Booking</string>
    <string name="close_label">Close</string>
</resources>
