<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_booking"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ProfileActivity">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="gomes.com.gomesstudioreservation.ProfileActivity">

        <ImageView
            android:id="@+id/iv_header_profile"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:contentDescription="@string/foto_user_description"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/tv_profile_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_label"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/iv_header_profile"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_header_profile" />

        <ImageView
            android:id="@+id/img_header_bg"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_foto"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_header_profile" />

        <EditText
            android:id="@+id/edtNamaUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="24dp"
            android:hint="@string/nama_user"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/img_header_bg"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img_header_bg" />

        <EditText
            android:id="@+id/edtUserEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/edtNamaUser"
            app:layout_constraintRight_toRightOf="@+id/edtNamaUser"
            app:layout_constraintTop_toBottomOf="@+id/edtNamaUser" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/prompt_phone_number"
            android:inputType="phone"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/edtUserEmail"
            app:layout_constraintRight_toRightOf="@+id/edtUserEmail"
            app:layout_constraintTop_toBottomOf="@+id/edtUserEmail" />

        <Button
            android:id="@+id/btnEditUserInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#4CAF50"
            android:text="@string/edit_btn"
            android:textColor="@color/colorIcons"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/phoneNumber"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/img_header_bg"
            app:layout_constraintRight_toRightOf="@+id/img_header_bg"
            app:layout_constraintTop_toTopOf="@+id/phoneNumber" />

        <Button
            android:id="@+id/btnCancelEditUserInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/cancel_btn_label"
            android:textColor="@color/colorIcons"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/phoneNumber"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/img_header_bg"
            app:layout_constraintRight_toRightOf="@+id/img_header_bg"
            app:layout_constraintTop_toTopOf="@+id/phoneNumber" />

        <EditText
            android:id="@+id/edtPasswordForChanges"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/input_password_to_confirm_hint"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/img_header_bg"
            app:layout_constraintRight_toLeftOf="@+id/btnSaveEditUserInfo"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

        <Button
            android:id="@+id/btnSaveEditUserInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#303F9F"
            android:text="@string/save_btn"
            android:textColor="@color/colorIcons"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/edtPasswordForChanges"
            app:layout_constraintRight_toRightOf="@+id/phoneNumber"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:background="@color/colorAccent"
            android:text="@string/change_password_btn"
            android:textColor="@color/colorIcons"
            android:textSize="20sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

        <EditText
            android:id="@+id/edtCurrentPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/current_password_label"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/btnChangePassword"
            app:layout_constraintRight_toRightOf="@+id/btnChangePassword"
            app:layout_constraintTop_toBottomOf="@+id/btnChangePassword" />

        <EditText
            android:id="@+id/edtNewPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/new_password_label"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/btnChangePassword"
            app:layout_constraintRight_toRightOf="@+id/btnChangePassword"
            app:layout_constraintTop_toBottomOf="@+id/edtCurrentPassword" />

        <EditText
            android:id="@+id/edtConfirmNewPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/confirm_new_password_hint"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/btnChangePassword"
            app:layout_constraintRight_toRightOf="@+id/btnChangePassword"
            app:layout_constraintTop_toBottomOf="@+id/edtNewPassword" />

        <Button
            android:id="@+id/btnSaveNewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#303F9F"
            android:text="@string/save_btn"
            android:textColor="@color/colorIcons"
            android:textSize="20sp"
            android:visibility="invisible"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtConfirmNewPassword"
            app:layout_constraintVertical_bias="0.0" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
