<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_payment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gomes.com.gomesstudioreservation.PaymentActivity">

    <ImageView
        android:id="@+id/iv_header_payment"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:contentDescription="@string/bgHeaderbookingreview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/tv_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_label"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/iv_header_payment"
        app:layout_constraintLeft_toLeftOf="@+id/iv_header_payment"
        app:layout_constraintRight_toRightOf="@+id/iv_header_payment"
        app:layout_constraintTop_toTopOf="@+id/iv_header_payment" />

    <TextView
        android:id="@+id/tv_bank_account_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/bank_account_number_label"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_header_payment" />

    <TextView
        android:id="@+id/tv_bank_account_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="0001234567864"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/tv_bank_account_number_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_bank_account_number_label" />

    <TextView
        android:id="@+id/tv_under_the_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/under_the_name_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textSize="20sp"
        android:textStyle=""
        app:layout_constraintLeft_toLeftOf="@+id/tv_bank_account_number"
        app:layout_constraintTop_toBottomOf="@+id/tv_bank_account_number" />

    <TextView
        android:id="@+id/tv_under_the_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Agha Maulana"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/tv_under_the_name_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_under_the_name_label" />

    <TextView
        android:id="@+id/tv_keterangan_payment1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/keterangan_payment1"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_under_the_name"
        app:layout_constraintLeft_toLeftOf="@+id/tv_under_the_name" />

    <TextView
        android:id="@+id/tv_limit_payment_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/limit_time_default_value"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_keterangan_payment1"
        app:layout_constraintTop_toBottomOf="@+id/tv_keterangan_payment1" />

    <TextView
        android:id="@+id/tv_confirm_payment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/confirm_payment_label"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_limit_payment_time" />

    <TextView
        android:id="@+id/tv_keterangan_payment2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/keterangan_payment2"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/tv_keterangan_payment1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_confirm_payment" />

    <TextView
        android:id="@+id/tv_contact_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="08563036310 (cahyo)"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/tv_keterangan_payment2"
        app:layout_constraintTop_toBottomOf="@+id/tv_keterangan_payment2" />

</android.support.constraint.ConstraintLayout>
